--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"date-fns": "^1.30.1",
+		"prop-types": "^15.7.2",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.2.0",
-		"@fortawesome/fontawesome-svg-core": "^1.2.9",
-		"@fortawesome/free-solid-svg-icons": "^5.6.0",
-		"@fortawesome/react-fontawesome": "^0.1.3",
-		"date-fns": "^1.30.1"
+		"react-scripts": "3.2.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
